Se han escapado los punteros del zoo

--- a/04-Angular/Ej01-Angular/src/app/app.component.html
+++ b/04-Angular/Ej01-Angular/src/app/app.component.html
@@ -5,20 +5,24 @@
 </marquee>
 
 <!--Plantillas-->
-En una plantilla colocamos el contenido estático directamente con HTML
+<div class="m-4">
+  En una plantilla colocamos el contenido estático directamente con HTML
+</div>
 <br/><br/>
 
 <!--Expresiones-->
 
-<b>Expresiones:</b><br/>
-Las usamos cuando queremos añadir el valor de una variable directamente en un nodo de texto<br>
+<div class="m-4">
+  <b>Expresiones:</b><br/>
+  Las usamos cuando queremos añadir el valor de una variable directamente en un nodo de texto<br>
+</div>
 
 
-<h2>{{ 100+200 }}</h2>
+<h2 class="m-4">{{ 100+200 }}</h2>
 
-<h2>{{ "Movida"+" gordísima"}}</h2>
+<h2 class="m-4">{{ "Movida"+" gordísima"}}</h2>
 
-<h2>{{ 500 > 250 }}</h2>
+<h2 class="m-4">{{ 500 > 250 }}</h2>
 
 
 <!--
@@ -29,12 +33,12 @@ Las variables utilizadas en las expresiones normalmente estarán declaradas en e
 También se podrán declarar en la propia plantilla
 -->
 
-<h2>
+<h2 class="m-4">
   <font color="lightGreen">
     {{ mensaje }}
   </font>
 </h2>
-<h2>
+<h2 class="m-4">
   <font color="lightBlue">
     {{ numero1 + numero2 }}
   </font>
@@ -46,29 +50,60 @@ Eventos:
 (nombre_evento)="llamada_a_la_función()"
 -->
 
-<div>
-  <button (click)="insertarPelicula()" class="btn btn-primary mr-1">Insertar</button>
+<div class="m-4">
+  <button (click)="insertarDisco()" class="btn btn-primary mr-1">Insertar</button>
   <button (click)="vaciarFormulario()" class="btn btn-primary mr-1">Vaciar</button>
 </div>
 
-<table>
+<div class="card m-4">
+  {{ disco.titulo }}
+</div>
+
+<table class="m-4">
   <tr>
     <td>Título</td>
     <td>
-      <input class="form-control" [(ngModel)]="pelicula.titulo" type="text" />
+      <!-- Con [(ngModel)] estamos uniendo el VALUE de un elemento de la plantilla con una PROPIEDAD del componente-->
+      <input class="form-control" [(ngModel)]="disco.titulo" type="text" />
     </td>
   </tr>
   <tr>
-    <td>Director</td>
+    <td>Grupo</td>
     <td>
-      <input class="form-control" [(ngModel)]="pelicula.director" type="text" />
+      <input class="form-control" [(ngModel)]="disco.grupo" type="text" />
     </td>
   </tr>
   <tr>
     <td>Año</td>
     <td>
-      <input class="form-control" [(ngModel)]="pelicula.year" type="text"/>
+      <input class="form-control" [(ngModel)]="disco.year" type="text"/>
     </td>
   </tr>
 </table>
 
+<div class="row">
+
+  <div class="col-5">
+    <table class="table table-hover table-striped m-4">
+      <tr>
+        <th>Título</th>
+        <th>Grupo</th>
+        <th>Año</th>
+      </tr>
+      <!--
+      Si queremos que una etiqueta se repita tantas veces como elementos haya o hayga en un array
+      colocaremos *ngFor en ella
+      La expresión asociada a *ngFor incluye el array que hay que recorrer y el modo en el que hay que recorrerlo
+      *ngFor="let <variable> of <array>"  
+      -->
+      <tr *ngFor="let g of discos">
+        <td>{{g.titulo}}</td>
+        <td>{{g.grupo}}</td>
+        <td>{{g.year}}</td>
+      </tr>
+
+    </table>
+  </div>
+  
+
+</div>
