Descompuestos con los componentes

--- a/04-Angular/Ej02-Componentes/src/app/componentes/cabecera/cabecera.component.html
+++ b/04-Angular/Ej02-Componentes/src/app/componentes/cabecera/cabecera.component.html
@@ -1,1 +1,4 @@
-<p>cabecera works!</p>
+
+<div class="text-center page-header">
+    <h2 class="mt-4 mb-4">Aplicación de gestion de discos DiscoGest 3000</h2>
+</div>  
