Descompuestos con los componentes

--- a/04-Angular/Ej02-Componentes/src/app/app.component.html
+++ b/04-Angular/Ej02-Componentes/src/app/app.component.html
@@ -1,8 +1,11 @@
-
 <app-cabecera></app-cabecera>
 
 <app-menu></app-menu>
 
-<app-discos></app-discos>
+<div class="row">
+    <div class="col-8 offset-2">
+        <app-discos></app-discos>
+    </div>
+</div>
 
 <app-pie></app-pie>
