Descompuestos con los componentes

--- a/04-Angular/Ej02-Componentes/src/app/componentes/discos/discos.component.html
+++ b/04-Angular/Ej02-Componentes/src/app/componentes/discos/discos.component.html
@@ -60,7 +60,7 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let d of discos">
+        <tr *ngFor="let d of discos" class="cursor-pointer-lucia-style" (click)="seleccionar(d)">
             <td>{{ d.titulo }}</td>
             <td>{{ d.grupo }}</td>
             <td>{{ d.year }}</td>
