--- a/04-Angular/Ej02-Componentes/src/app/app.component.html
+++ b/04-Angular/Ej02-Componentes/src/app/app.component.html
@@ -2,10 +2,12 @@
 
 <app-menu></app-menu>
 
-<div class="row">
-    <div class="col-8 offset-2">
-        <app-discos></app-discos>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-8 offset-2">
+            <app-discos></app-discos>
+        </div>
     </div>
 </div>
-
+    
 <app-pie></app-pie>
