--- a/04-Angular/Ej02-Componentes/src/app/componentes/discos/discos.component.html
+++ b/04-Angular/Ej02-Componentes/src/app/componentes/discos/discos.component.html
@@ -2,10 +2,13 @@
     Discos
 </h3>
 
+
+Id del disco: {{  disco._id  }}
+
 <div class="text-center"> 
-    <button class="btn btn-primary mr-1" (click)="insertar()">Insertar</button>
-    <button class="btn btn-primary mr-1" (click)="modificar()">Modificar</button>
-    <button class="btn btn-danger  mr-1" (click)="borrar()">Borrar</button>
+    <button class="btn btn-primary mr-1" (click)="insertar()"  [disabled]="disco._id!=0">Insertar</button>
+    <button class="btn btn-primary mr-1" (click)="modificar()" [disabled]="disco._id==0">Modificar</button>
+    <button class="btn btn-danger  mr-1" (click)="borrar()"    [disabled]="disco._id==0">Borrar</button>
     <button class="btn btn-warning mr-1" (click)="vaciar()">Vaciar</button>
 </div>
 
