Madre del amor hermoso con la orientacion a objetos

--- a/04-Angular/Ej02-Componentes/src/app/componentes/discos/discos.component.html
+++ b/04-Angular/Ej02-Componentes/src/app/componentes/discos/discos.component.html
@@ -9,7 +9,7 @@ Id del disco: {{  disco._id  }}
     <button class="btn btn-primary mr-1" (click)="insertar()"  [disabled]="disco._id!=0">Insertar</button>
     <button class="btn btn-primary mr-1" (click)="modificar()" [disabled]="disco._id==0">Modificar</button>
     <button class="btn btn-danger  mr-1" (click)="borrar()"    [disabled]="disco._id==0">Borrar</button>
-    <button class="btn btn-warning mr-1" (click)="vaciar()">Vaciar</button>
+    <button class="btn btn-warning mr-1" (click)="vaciar()"    [disabled]="disco.vacio()">Vaciar</button>
 </div>
 
 <br/>
