--- a/04-Angular/Ej03-Routing/src/app/componentes/componente1/componente1.component.html
+++ b/04-Angular/Ej03-Routing/src/app/componentes/componente1/componente1.component.html
@@ -19,17 +19,16 @@ Tiene que estar definida una ruta que expresamente indique que hay parámetros
 -->
 Pasando valores desde la vista:
 <br/>
-<button class="btn btn-primary" routerLink="/componente2/111/{{valor}}">Componente 2</button>
+<button class="btn btn-primary" routerLink="/componente2/111/222">Componente 2</button>
 <br/>
 <br/>
 
 <!--
 Navegación declarativa pasando parámetros que dependen de una expresión
-En este ejemplo vemos como el valor para el segundo parámetro sale de la propiedad 'valor' del componente1
 -->
-Pasando valores desde la vista:
+Pasando valores desde la vista [routerLink]:
 <br/>
-<button class="btn btn-primary" [routerLink]="[ '/componente2', '222', valor ]">Componente 2</button>
+<button class="btn btn-primary" [routerLink]="[ '/componente2', valor1, valor2 ]">Componente 2</button>
 <br/>
 <br/>
 
