--- a/04-Angular/Ej04-Servicios/src/app/app.component.html
+++ b/04-Angular/Ej04-Servicios/src/app/app.component.html
@@ -4,10 +4,23 @@
 <app-menu></app-menu>
 
 <div class="container-fluid">
-
+  
   <div class="row">
     <div class="col-8 offset-2">
-      <router-outlet></router-outlet>
+      
+        <router-outlet></router-outlet>
+        
+    </div>
+  </div>
+
+  <hr/>
+  
+  <div class="row">
+    <div class="col-4 offset-2">
+      <app-discos></app-discos>
+    </div>
+    <div class="col-4">
+      <app-discos></app-discos>
     </div>
   </div>
 
