--- a/04-Angular/Ej04-Servicios/src/app/componentes/discos/discos.component.html
+++ b/04-Angular/Ej04-Servicios/src/app/componentes/discos/discos.component.html
@@ -1,13 +1,12 @@
 <h3 class="text-center mt-3 mb-3">
-    Formulario de Discos
+    Discos
 </h3>
 
 <div class="text-center"> 
     <button class="btn btn-primary mr-1" (click)="insertar()"  [disabled]="disco._id!=0">Insertar</button>
     <button class="btn btn-primary mr-1" (click)="modificar()" [disabled]="disco._id==0">Modificar</button>
-    <button class="btn btn-danger  mr-1" (click)="borrar()"    [disabled]="disco._id==0" data-toggle="modal" data-target="#confirmacionVolver">Borrar</button>
+    <button class="btn btn-danger  mr-1" (click)="borrar()"    [disabled]="disco._id==0">Borrar</button>
     <button class="btn btn-warning mr-1" (click)="vaciar()"    [disabled]="disco.vacio()">Vaciar</button>
-    <button class="btn btn-warning mr-1" routerLink="/discos/listado">Volver</button>
 </div>
 
 <br/>
@@ -49,23 +48,31 @@
     </div>
 </div>    
 
-  <!-- Modal -->
-  <div class="modal fade" id="confirmacionVolver" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          ...
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
-      </div>
-    </div>
-  </div>
+<br/>
+
+<table class="table table-hover table-striped">    
+    <thead>
+        <tr>
+            <th>Título</th>
+            <th>Grupo</th>
+            <th>Año</th>
+            <th>Género</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let d of discos" class="cursor-pointer-lucia-style" (click)="seleccionar(d)">
+            <td>{{ d.titulo }}</td>
+            <td>{{ d.grupo }}</td>
+            <td>{{ d.year }}</td>
+            <td>{{ d.genero }}</td>
+        </tr>
+        <tr *ngIf="discos.length==0">
+            <td colspan="4">
+                No se han encontrado discos
+            </td>
+        </tr>
+    </tbody>
+</table> 
+    
+
+
