--- a/04-Angular/Ej04-Servicios/src/app/componentes/formularioDiscos/formulariodiscos.component.html
+++ b/04-Angular/Ej04-Servicios/src/app/componentes/formularioDiscos/formulariodiscos.component.html
@@ -3,9 +3,9 @@
 </h3>
 
 <div class="text-center"> 
-    <button class="btn btn-primary mr-1" (click)="insertar()"  [disabled]="disco._id!=0">Insertar</button>
-    <button class="btn btn-primary mr-1" (click)="modificar()" [disabled]="disco._id==0">Modificar</button>
-    <button class="btn btn-danger  mr-1" (click)="borrar()"    [disabled]="disco._id==0" data-toggle="modal" data-target="#confirmacionVolver">Borrar</button>
+    <button class="btn btn-primary mr-1" (click)="insertar()"  [disabled]="disco._id!=null">Insertar</button>
+    <button class="btn btn-primary mr-1" (click)="modificar()" [disabled]="disco._id==null">Modificar</button>
+    <button class="btn btn-danger  mr-1"                       [disabled]="disco._id==null" data-toggle="modal" data-target="#confirmacionBorrar">Borrar</button>
     <button class="btn btn-warning mr-1" (click)="vaciar()"    [disabled]="disco.vacio()">Vaciar</button>
     <button class="btn btn-warning mr-1" routerLink="/discos/listado">Volver</button>
 </div>
@@ -50,21 +50,21 @@
 </div>    
 
   <!-- Modal -->
-  <div class="modal fade" id="confirmacionVolver" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal fade" id="confirmacionBorrar" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <h5 class="modal-title" id="exampleModalLabel">Confirmación de borrado</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
         <div class="modal-body">
-          ...
+          ¿Está seguro de que quiere borrar este disco?
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+          <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="borrar()">Borrar</button>
         </div>
       </div>
     </div>
