Un flecha en un campamento

--- a/04-Angular/Ej05-HttpClient/src/app/app.component.html
+++ b/04-Angular/Ej05-HttpClient/src/app/app.component.html
@@ -10,6 +10,14 @@
     <div class="col-md-8 offset-md-2">
       <app-listado-usuarios></app-listado-usuarios>
     </div>
+  
+    <div class="col-12">
+      <hr/>
+    </div>
+
+    <div class="col-md-8 offset-md-2">
+      <app-formulario-correo></app-formulario-correo>
+    </div>    
 
   </div>
 
