--- a/04-Angular/Ej05-HttpClient/src/app/componentes/cabecera/cabecera.component.html
+++ b/04-Angular/Ej05-HttpClient/src/app/componentes/cabecera/cabecera.component.html
@@ -1,4 +1,4 @@
 
 <div class="text-center page-header">
-    <h2 class="mt-4 mb-4">HttpClient (y los observables)</h2>
+    <h2 class="mt-4 mb-4">HttpClient (y los observables y lo patrones de diseño)</h2>
 </div>  
