--- a/05-MEAN/01-Usuarios/Angular/src/app/componentes/cabecera/cabecera.component.html
+++ b/05-MEAN/01-Usuarios/Angular/src/app/componentes/cabecera/cabecera.component.html
@@ -1,4 +1,4 @@
 
 <div class="text-center page-header">
-    <h2 class="mt-4 mb-4">Aplicación de gestion de discos DiscoGest 3000 (Servicios)</h2>
+    <h2 class="mt-4 mb-4">Tienda 3000</h2>
 </div>  
