--- a/05-MEAN/01-Usuarios/Angular/src/app/componentes/maquetacion/maquetacion-login/maquetacion-login.component.html
+++ b/05-MEAN/01-Usuarios/Angular/src/app/componentes/maquetacion/maquetacion-login/maquetacion-login.component.html
@@ -1,1 +1,13 @@
-<p>maquetacion-login works!</p>
+
+<div class="container-fluid">
+
+    <div class="row">
+
+        <div class="col-sm-4 offset-sm-4">
+            <router-outlet></router-outlet>
+        </div>
+    
+    </div>
+
+</div>
+
