--- a/05-MEAN/01-Usuarios/Angular/src/app/componentes/usuarios/login/login.component.html
+++ b/05-MEAN/01-Usuarios/Angular/src/app/componentes/usuarios/login/login.component.html
@@ -1,1 +1,33 @@
-<p>login works!</p>
+
+
+<div class="card card-primary">
+    <div class="card-header">Login</div>
+    <div class="card-body">
+
+    <div class="form-horizontal" id="formulario">
+        <div class="form-group">
+        <label class="control-label col-xs-2" for="login">Login</label>
+        <div class="col-xs-10">
+            <input id="login" type="text" class="form-control"/>
+        </div>
+        </div>   
+        <div class="form-group">
+        <label class="control-label col-xs-2" for="pw">Pw</label>
+        <div class="col-xs-10">
+            <input id="pw" type="text" class="form-control"/>
+        </div>
+        </div>  
+        
+        <!--
+        div *ngIf="mensaje" class="alert alert-danger">{{mensaje}}</div>
+        -->
+
+    </div> <!--formulario-->
+
+    <div class="text-center">
+        <input type="button" class="btn mr-1 btn-primary" style="width:110px" value="Entrar" />
+        <input type="button" class="btn mr-1 btn-primary" style="width:110px" value="Registrarse" />
+    </div>   
+
+    </div>
+</div>
