--- a/05-MEAN/01-Usuarios/Angular/src/app/componentes/usuarios/login/login.component.html
+++ b/05-MEAN/01-Usuarios/Angular/src/app/componentes/usuarios/login/login.component.html
@@ -1,4 +1,10 @@
 
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+
 
 <div class="card card-primary">
     <div class="card-header">Login</div>
@@ -8,25 +14,25 @@
         <div class="form-group">
         <label class="control-label col-xs-2" for="login">Login</label>
         <div class="col-xs-10">
-            <input id="login" type="text" class="form-control"/>
+            <input id="login" type="text" [(ngModel)]="login" class="form-control"/>
         </div>
         </div>   
         <div class="form-group">
         <label class="control-label col-xs-2" for="pw">Pw</label>
         <div class="col-xs-10">
-            <input id="pw" type="text" class="form-control"/>
+            <input id="pw" type="text" [(ngModel)]="password" class="form-control"/>
         </div>
         </div>  
         
         <!--
-        div *ngIf="mensaje" class="alert alert-danger">{{mensaje}}</div>
+        <div *ngIf="mensaje" class="alert alert-danger">{{mensaje}}</div>
         -->
 
-    </div> <!--formulario-->
+    </div>
 
     <div class="text-center">
-        <input type="button" class="btn mr-1 btn-primary" style="width:110px" value="Entrar" />
-        <input type="button" class="btn mr-1 btn-primary" style="width:110px" value="Registrarse" />
+        <input type="button" class="btn mr-1 btn-primary" style="width:110px" (click)="entrar()" value="Entrar" />
+        <input type="button" class="btn mr-1 btn-primary" style="width:110px" routerLink="/registro" value="Registrarse" />
     </div>   
 
     </div>
