El CORS y los que siempre pagan el pato

--- a/05-MEAN/01-Usuarios/Angular/src/app/componentes/usuarios/login/login.component.html
+++ b/05-MEAN/01-Usuarios/Angular/src/app/componentes/usuarios/login/login.component.html
@@ -1,10 +1,8 @@
-
 <br/>
 <br/>
 <br/>
 <br/>
 <br/>
-
 
 <div class="card card-primary">
     <div class="card-header">Login</div>
@@ -24,9 +22,7 @@
         </div>
         </div>  
         
-        <!--
-        <div *ngIf="mensaje" class="alert alert-danger">{{mensaje}}</div>
-        -->
+        <div *ngIf="mensaje.length>0" class="alert alert-danger">{{mensaje}}</div>
 
     </div>
 
