--- a/04-Angular/Ej06-Formularios-Reactivos/src/app/componentes/formulario-discos/formulario-discos.component.html
+++ b/04-Angular/Ej06-Formularios-Reactivos/src/app/componentes/formulario-discos/formulario-discos.component.html
@@ -20,7 +20,7 @@ Unimos el formulario con el formGroup del componente con [formGroup]
 -->
 <form class="row" [formGroup]="formulario">
     <div class="col-sm-12 col-md-2 mt-1">
-        <label for="titulo">Título</label>
+        <label for="titulo">Título *</label>
     </div>
     <div class="col-sm-12 col-md-10 mt-1">
         <!--
@@ -30,14 +30,13 @@ Unimos el formulario con el formGroup del componente con [formGroup]
         
         <div *ngIf="(formulario.get('titulo').dirty || formulario.get('titulo').touched)">
             <small *ngIf="formulario.get('titulo').hasError('required')" class="text-danger">
-                Campo obligatorio.
+                El título es obligatorio.
             </small>
         </div>
-
     </div>
     
     <div class="col-sm-12 col-md-2 mt-1">
-        <label for="grupo">Grupo</label>
+        <label for="grupo">Grupo *</label>
     </div>
     <div class="col-sm-12 col-md-10 mt-1">
         <input id="grupo" formControlName="grupo" class="form-control"/>
@@ -45,14 +44,14 @@ Unimos el formulario con el formGroup del componente con [formGroup]
         <div *ngIf="(formulario.get('grupo').dirty || formulario.get('grupo').touched)">
             <small class="text-danger"
                 *ngIf="formulario.get('grupo').hasError('required')">
-                Campo obligatorio.
+                El grupo es obligatorio.
             </small>
         </div>
 
     </div>                 
     
     <div class="col-sm-12 col-md-2 mt-1">
-        <label for="year">Año</label>
+        <label for="year">Año *</label>
     </div>
     <div class="col-sm-12 col-md-10 mt-1">
         <input id="year" formControlName="year" class="form-control"/>
@@ -60,11 +59,11 @@ Unimos el formulario con el formGroup del componente con [formGroup]
         <div *ngIf="(formulario.get('year').dirty || formulario.get('year').touched)">
             <small class="text-danger"
                 *ngIf="formulario.get('year').hasError('required')">
-                Campo obligatorio.
+                El año es obligatorio.
             </small>
             <small class="text-danger"
                 *ngIf="formulario.get('year').hasError('pattern')">
-                Debe ser un numero.
+                El año debe ser un numero de cuatro cifras.
             </small>
         </div>
     </div>
