--- a/05-MEAN/01-Usuarios/Angular/src/app/componentes/usuarios/registro/registro.component.html
+++ b/05-MEAN/01-Usuarios/Angular/src/app/componentes/usuarios/registro/registro.component.html
@@ -10,8 +10,7 @@
     <div class="col-xs-8">
       <input type="text" 
              class="form-control"
-             required="required"
-             [(ngModel)]="usuario.nombre"/>
+             required="required"/>
     </div> 
   </div>
   <div class="form-group">
@@ -19,12 +18,7 @@
     <div class="col-xs-8">
       <input type="text" 
              class="form-control"
-             required="required"
-             [(ngModel)]="usuario.login"
-             (keyup)="programarTemporizador()"/>
-    </div>
-    <div *ngIf="errorLoginRepetido">
-      <span class="text-danger">{{errorLoginRepetido}}</span>
+             required="required"/>
     </div>
   </div>
   
@@ -32,30 +26,27 @@
     <label class="control-label col-xs-2" for="pw" >Password</label>
     <div class="col-xs-8">
       <input type="text" 
-             class="form-control"
-             [(ngModel)]="usuario.pw"/>
+             class="form-control"/>
     </div>
   </div>
   <div class="form-group">
     <label class="control-label col-xs-2" for="cp">Confirmar password</label>
     <div class="col-xs-8">
       <input type="text" 
-             class="form-control"
-             [(ngModel)]="confirmacionPw"/>
+             class="form-control"/>
     </div>
   </div>
   <div class="form-group">
     <label class="control-label col-xs-2" for="correoE">Correo E.</label>
     <div class="col-xs-8">
       <input type="text" 
-             class="form-control"
-             [(ngModel)]="usuario.correoE"/>
+             class="form-control"/>
     </div>
   </div>
   <div class="form-group">
     <label class="control-label col-xs-2" for="idioma">Idioma</label>
     <div class="col-xs-8">
-      <select class="form-control" [(ngModel)]="usuario.idioma">
+      <select class="form-control">
         <option>ES</option>
         <option>EN</option>
       </select>
@@ -63,28 +54,15 @@
   </div>
 </div>
 
-<!--
-Podríamos hacerlo así
-<div *ngIf="mensaje.length>0" class="alert alert-danger">{{mensaje}}</div>
--->
-<!--Preguntar por la existencia de algo en angular implica que devuelve false si:
-    -es undefined
-    -es null
-    -es una cadena de texto vacía en caso de tratarse de un string
--->
-<div class="alert alert-danger"></div>
-
 <div class="text-center">
   <input type="button" 
          value="Siguiente" 
          class="btn mr-1 btn-primary" 
-         style="width:110px"
-         (click)="siguiente()"/>
+         style="width:110px"/>
   <input type="button" 
          value="Cancelar"  
          class="btn mr-1 btn-warning" 
-         style="width:110px"
-         routerLink="/"/>
+         style="width:110px"/>
 </div>
 
 
