--- a/05-MEAN/01-Usuarios/Angular/src/app/componentes/usuarios/registro/registro.component.html
+++ b/05-MEAN/01-Usuarios/Angular/src/app/componentes/usuarios/registro/registro.component.html
@@ -4,65 +4,74 @@
     <h2>Alta de usuario</h2>
 </div>
 
-<div class="form-horizontal" id="formulario">
-  <div class="form-group">
-    <label class="control-label col-xs-2" for="nombre">Nombre</label>
-    <div class="col-xs-8">
-      <input type="text" 
-             class="form-control"
-             required="required"/>
-    </div> 
-  </div>
-  <div class="form-group">
-    <label class="control-label col-xs-2" for="login">Login</label>
-    <div class="col-xs-8">
-      <input type="text" 
-             class="form-control"
-             required="required"/>
+<form class="row" [formGroup]="formulario">
+
+  <div class="form-horizontal" id="formulario">
+    <div class="form-group">
+      <label class="control-label col-xs-2" for="nombre">Nombre</label>
+      <div class="col-xs-8">
+        <input type="text" 
+              class="form-control"
+              formControlName="nombre"/>
+      </div> 
+    </div>
+    <div class="form-group">
+      <label class="control-label col-xs-2" for="login">Login</label>
+      <div class="col-xs-8">
+        <input type="text" 
+              class="form-control"
+              formControlName="login"/>
+      </div>
+    </div>
+    
+    <div class="form-group">
+      <label class="control-label col-xs-2" for="pw" >Password</label>
+      <div class="col-xs-8">
+        <input type="text" 
+              class="form-control"
+              formControlName="password"/>
+      </div>
+    </div>
+    <div class="form-group">
+      <label class="control-label col-xs-2" for="cp">Confirmar password</label>
+      <div class="col-xs-8">
+        <input type="text" 
+              class="form-control"
+              formControlName="confirmarPassword"/>
+      </div>
+    </div>
+    <div class="form-group">
+      <label class="control-label col-xs-2" for="correoE">Correo E.</label>
+      <div class="col-xs-8">
+        <input type="text" 
+              class="form-control"
+              formControlName="correoE"/>
+      </div>
+    </div>
+    <div class="form-group">
+      <label class="control-label col-xs-2" for="idioma">Idioma</label>
+      <div class="col-xs-8">
+        <select class="form-control" formControlName="idioma">
+          <option>ES</option>
+          <option>EN</option>
+        </select>
+      </div>
     </div>
   </div>
-  
-  <div class="form-group">
-    <label class="control-label col-xs-2" for="pw" >Password</label>
-    <div class="col-xs-8">
-      <input type="text" 
-             class="form-control"/>
-    </div>
-  </div>
-  <div class="form-group">
-    <label class="control-label col-xs-2" for="cp">Confirmar password</label>
-    <div class="col-xs-8">
-      <input type="text" 
-             class="form-control"/>
-    </div>
-  </div>
-  <div class="form-group">
-    <label class="control-label col-xs-2" for="correoE">Correo E.</label>
-    <div class="col-xs-8">
-      <input type="text" 
-             class="form-control"/>
-    </div>
-  </div>
-  <div class="form-group">
-    <label class="control-label col-xs-2" for="idioma">Idioma</label>
-    <div class="col-xs-8">
-      <select class="form-control">
-        <option>ES</option>
-        <option>EN</option>
-      </select>
-    </div>
-  </div>
-</div>
+
+</form>
 
 <div class="text-center">
   <input type="button" 
          value="Siguiente" 
          class="btn mr-1 btn-primary" 
-         style="width:110px"/>
+         style="width:110px"
+         (click)="siguiente()"/>
   <input type="button" 
          value="Cancelar"  
          class="btn mr-1 btn-warning" 
-         style="width:110px"/>
+         style="width:110px"
+         routerLink="/"/>
 </div>
 
 
