--- a/05-MEAN/01-Usuarios/Angular/src/app/componentes/usuarios/registro/registro.component.html
+++ b/05-MEAN/01-Usuarios/Angular/src/app/componentes/usuarios/registro/registro.component.html
@@ -4,20 +4,20 @@
     <h2>Alta de usuario</h2>
 </div>
 
-<form class="row" [formGroup]="formulario">
+<form [formGroup]="formulario">
 
   <div class="form-horizontal" id="formulario">
     <div class="form-group">
-      <label class="control-label col-xs-2" for="nombre">Nombre</label>
-      <div class="col-xs-8">
+      <label class="control-label" for="nombre">Nombre</label>
+      <div >
         <input type="text" 
               class="form-control"
               formControlName="nombre"/>
       </div> 
     </div>
     <div class="form-group">
-      <label class="control-label col-xs-2" for="login">Login</label>
-      <div class="col-xs-8">
+      <label class="control-label" for="login">Login</label>
+      <div>
         <input type="text" 
               class="form-control"
               formControlName="login"/>
@@ -25,32 +25,32 @@
     </div>
     
     <div class="form-group">
-      <label class="control-label col-xs-2" for="pw" >Password</label>
-      <div class="col-xs-8">
+      <label class="control-label" for="pw" >Password</label>
+      <div>
         <input type="text" 
               class="form-control"
               formControlName="password"/>
       </div>
     </div>
     <div class="form-group">
-      <label class="control-label col-xs-2" for="cp">Confirmar password</label>
-      <div class="col-xs-8">
+      <label class="control-label" for="confirmarPassword">Confirmar password</label>
+      <div>
         <input type="text" 
               class="form-control"
               formControlName="confirmarPassword"/>
       </div>
     </div>
     <div class="form-group">
-      <label class="control-label col-xs-2" for="correoE">Correo E.</label>
-      <div class="col-xs-8">
+      <label class="control-label" for="correoE">Correo E.</label>
+      <div>
         <input type="text" 
               class="form-control"
               formControlName="correoE"/>
       </div>
     </div>
     <div class="form-group">
-      <label class="control-label col-xs-2" for="idioma">Idioma</label>
-      <div class="col-xs-8">
+      <label class="control-label" for="idioma">Idioma</label>
+      <div>
         <select class="form-control" formControlName="idioma">
           <option>ES</option>
           <option>EN</option>
