Vamos a hacer la croqueta con luis ramón

--- a/05-MEAN/01-Usuarios/Angular/src/app/componentes/usuarios/registro/registro.component.html
+++ b/05-MEAN/01-Usuarios/Angular/src/app/componentes/usuarios/registro/registro.component.html
@@ -109,7 +109,7 @@
          value="Cancelar"  
          class="btn mr-1 btn-warning" 
          style="width:110px"
-         routerLink="/"/>
+         (click)="cancelar()"/>
 </div>
 
 
