Vamos a hacer la croqueta con luis ramón

--- a/05-MEAN/01-Usuarios/Angular/src/app/componentes/maquetacion/maquetacion-tienda/maquetacion-tienda.component.html
+++ b/05-MEAN/01-Usuarios/Angular/src/app/componentes/maquetacion/maquetacion-tienda/maquetacion-tienda.component.html
@@ -1,1 +1,16 @@
-<p>maquetacion-tienda works!</p>
+
+<app-menu></app-menu>
+
+<div class="row">
+
+    <div class="col-sm-2">
+        <!--Router outlet IZQ-->
+    </div>
+    <div class="col-sm-8">
+        <router-outlet></router-outlet>
+    </div>
+    <div class="col-sm-2">
+        <!--Router outlet DER-->
+    </div>
+
+</div>
