--- a/05-MEAN/01-Usuarios/Angular/src/app/componentes/maquetacion/maquetacion-login/maquetacion-login.component.html
+++ b/05-MEAN/01-Usuarios/Angular/src/app/componentes/maquetacion/maquetacion-login/maquetacion-login.component.html
@@ -1,3 +1,10 @@
+<div class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <ul class="navbar-nav">
+
+    </ul>
+</div> 
+
+
 
 <div class="container-fluid">
 
