--- a/05-MEAN/01-Usuarios/Angular/src/app/componentes/tienda/menu/menu.component.html
+++ b/05-MEAN/01-Usuarios/Angular/src/app/componentes/tienda/menu/menu.component.html
@@ -1,13 +1,19 @@
 <div class="navbar navbar-expand-sm bg-dark navbar-dark">
     <ul class="navbar-nav">
         <li class="nav-item active">
-            <a class="nav-link" href="#">Discos</a>
+            <a class="nav-link" href="#">&#60;Perfil&#62;</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Grupos</a>
+            <a class="nav-link" href="#">Catálogo</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Discográficas</a>
+            <a class="nav-link" href="#">Cesta</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Pedidos</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Facturas</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="#">Salir</a>
