Vamos a hacer la croqueta con luis ramón

--- a/05-MEAN/01-Usuarios/Angular/src/app/componentes/usuarios/perfil/perfil.component.html
+++ b/05-MEAN/01-Usuarios/Angular/src/app/componentes/usuarios/perfil/perfil.component.html
@@ -16,11 +16,11 @@
     <div class="col-sm-12 col-md-10 mt-1">
         <input id="nombre" formControlName="nombre" class="form-control"/>
         
-        <div *ngIf="(formulario.get('nombre').dirty || formulario.get('nombre').touched)">
-            <small *ngIf="formulario.get('nombre').hasError('required')" class="text-danger">
+        <div *ngIf="(formulario.get('nombre')?.dirty || formulario.get('nombre')?.touched)">
+            <small *ngIf="formulario.get('nombre')?.hasError('required')" class="text-danger">
                 Campo obligatorio.
             </small>
-            <small *ngIf="formulario.get('nombre').hasError('minlength')" class="text-danger">
+            <small *ngIf="formulario.get('nombre')?.hasError('minlength')" class="text-danger">
                 La longitud mínima es 10 caracteres
             </small>
         </div>
@@ -30,11 +30,11 @@
         <label for="pw">Password</label>
     </div>
     <div class="col-sm-12 col-md-10 mt-1">
-        <input id="pw" formControlName="pw" class="form-control"/>
+        <input id="pw" formControlName="password" class="form-control"/>
 
-        <div *ngIf="(formulario.get('pw').dirty || formulario.get('pw').touched)">
+        <div *ngIf="(formulario.get('password')?.dirty || formulario.get('password')?.touched)">
             <small class="text-danger"
-                *ngIf="formulario.get('pw').hasError('required')">
+                *ngIf="formulario.get('password')?.hasError('required')">
                 Campo obligatorio.
             </small>
         </div>
@@ -56,11 +56,11 @@
     <div class="col-sm-12 col-md-10 mt-1">
         <input id="correoE" formControlName="correoE" class="form-control"/>
 
-        <div *ngIf="(formulario.get('correoE').dirty || formulario.get('correoE').touched)">
-            <small *ngIf="formulario.get('correoE').hasError('required')" class="text-danger" >
+        <div *ngIf="(formulario.get('correoE')?.dirty || formulario.get('correoE')?.touched)">
+            <small *ngIf="formulario.get('correoE')?.hasError('required')" class="text-danger" >
                 Campo obligatorio.
             </small>
-            <small *ngIf="formulario.get('correoE').hasError('email')" class="text-danger" >
+            <small *ngIf="formulario.get('correoE')?.hasError('email')" class="text-danger" >
                 No es un correo electrónico correcto.
             </small>
         </div>
@@ -72,9 +72,9 @@
     <div class="col-sm-12 col-md-10 mt-1">
         <input id="telefono" formControlName="telefono" class="form-control"/>
 
-        <div *ngIf="(formulario.get('telefono').dirty || formulario.get('telefono').touched)">
+        <div *ngIf="(formulario.get('telefono')?.dirty || formulario.get('telefono')?.touched)">
             <small class="text-danger"
-                *ngIf="formulario.get('telefono').hasError('required')">
+                *ngIf="formulario.get('telefono')?.hasError('required')">
                 Campo obligatorio.
             </small>
         </div>        
@@ -86,9 +86,9 @@
     <div class="col-sm-12 col-md-10 mt-1">
         <input id="direccion" formControlName="direccion" class="form-control"/>
 
-        <div *ngIf="(formulario.get('direccion').dirty || formulario.get('direccion').touched)">
+        <div *ngIf="(formulario.get('direccion')?.dirty || formulario.get('direccion')?.touched)">
             <small class="text-danger"
-                *ngIf="formulario.get('direccion').hasError('required')">
+                *ngIf="formulario.get('direccion')?.hasError('required')">
                 Campo obligatorio.
             </small>
         </div>        
