Vamos a hacer la croqueta con luis ramón

--- a/05-MEAN/01-Usuarios/Angular/src/app/componentes/usuarios/perfil/perfil.component.html
+++ b/05-MEAN/01-Usuarios/Angular/src/app/componentes/usuarios/perfil/perfil.component.html
@@ -25,7 +25,8 @@
             </small>
         </div>
     </div>
-    
+    <!--
+    PAra cambiar el password debemos hacer una pantalla especifica para esa acción
     <div class="col-sm-12 col-md-2 mt-1">
         <label for="pw">Password</label>
     </div>
@@ -38,7 +39,8 @@
                 Campo obligatorio.
             </small>
         </div>
-    </div>                 
+    </div> 
+    -->                
     
     <div class="col-sm-12 col-md-2 mt-1">
         <label for="year">Idioma</label>
