--- a/05-MEAN/01-Usuarios/Angular/src/app/componentes/tienda/menu/menu.component.html
+++ b/05-MEAN/01-Usuarios/Angular/src/app/componentes/tienda/menu/menu.component.html
@@ -1,22 +1,22 @@
 <div class="navbar navbar-expand-sm bg-dark navbar-dark">
     <ul class="navbar-nav">
         <li class="nav-item active">
-            <a class="nav-link" href="#">&#60;Perfil&#62;</a>
+            <a class="nav-link" routerLink="/tienda/perfil">&#60;Perfil&#62;</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Catálogo</a>
+            <a class="nav-link" routerLink="/tienda">Catálogo</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Cesta</a>
+            <a class="nav-link" routerLink="/tienda">Cesta</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Pedidos</a>
+            <a class="nav-link" routerLink="/tienda">Pedidos</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Facturas</a>
+            <a class="nav-link" routerLink="/tienda">Facturas</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Salir</a>
+            <a class="nav-link" routerLink="/tienda">Salir</a>
         </li>
     </ul>
 </div> 
