--- a/05-MEAN/01-Usuarios/Angular/src/app/componentes/tienda/menu/menu.component.html
+++ b/05-MEAN/01-Usuarios/Angular/src/app/componentes/tienda/menu/menu.component.html
@@ -1,7 +1,7 @@
 <div class="navbar navbar-expand-sm bg-dark navbar-dark">
     <ul class="navbar-nav">
         <li class="nav-item active">
-            <a class="nav-link" routerLink="/tienda/perfil">&#60;Perfil&#62;</a>
+            <a class="nav-link" routerLink="/tienda/perfil">{{usuario?.nombre}}</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" routerLink="/tienda">Catálogo</a>
