Alejemos a los niños de la informática

--- a/05-MEAN/01-Usuarios/Angular/src/app/componentes/usuarios/perfil/perfil.component.html
+++ b/05-MEAN/01-Usuarios/Angular/src/app/componentes/usuarios/perfil/perfil.component.html
@@ -103,8 +103,8 @@
 </div>
 
 
-  <!-- Modal -->
-  <div class="modal fade" id="confirmacionBaja" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<!-- Modal -->
+<div class="modal fade" id="confirmacionBaja" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
@@ -117,10 +117,10 @@
           ¿Está seguro de que quiere darse de baja?
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-          <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="bajaUsuario()">Baja</button>
+          <button type="button" class="btn btn-success" data-dismiss="modal">Cancelar</button>
+          <button type="button" class="btn btn-danger" data-dismiss="modal" (click)="bajaUsuario()">Baja</button>
         </div>
       </div>
     </div>
-  </div>
+</div>
 
