--- a/05-MEAN/01-Usuarios/Angular/src/app/componentes/tienda/menu/menu.component.html
+++ b/05-MEAN/01-Usuarios/Angular/src/app/componentes/tienda/menu/menu.component.html
@@ -16,7 +16,7 @@
             <a class="nav-link" routerLink="/tienda">Facturas</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" routerLink="/tienda">Salir</a>
+            <a class="nav-link" (click)="logout()">Salir</a>
         </li>
     </ul>
 </div> 
