Acción de gracias desde miami

--- a/05-MEAN/02-Tienda/Angular/src/app/componentes/tienda/menu/menu.component.html
+++ b/05-MEAN/02-Tienda/Angular/src/app/componentes/tienda/menu/menu.component.html
@@ -4,7 +4,7 @@
             <a class="nav-link" routerLink="/tienda/perfil">{{usuario?.nombre}}</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" routerLink="/tienda">Catálogo</a>
+            <a class="nav-link" routerLink="/tienda/catalogo">Catálogo</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" routerLink="/tienda">Cesta</a>
