--- a/05-MEAN/02-Tienda/Angular/src/app/app.component.html
+++ b/05-MEAN/02-Tienda/Angular/src/app/app.component.html
@@ -1,6 +1,9 @@
+<div class="container-fluid">
+    
+    <app-cabecera></app-cabecera>
+    
+    <router-outlet></router-outlet>
+    
+    <app-pie></app-pie>
 
-<app-cabecera></app-cabecera>
-
-<router-outlet></router-outlet>
-
-<app-pie></app-pie>
+</div>
