--- a/05-MEAN/02-Tienda/Angular/src/app/componentes/tienda/catalogo/catalogo.component.html
+++ b/05-MEAN/02-Tienda/Angular/src/app/componentes/tienda/catalogo/catalogo.component.html
@@ -52,7 +52,7 @@
     
 <div class="row">
 
-    <div class="col-4" *ngFor="let p of productos">
+    <div class="col-xl-4 col-md-6 col-12" *ngFor="let p of productos">
         <app-producto [producto]="p"></app-producto>      
     </div>    
 
