--- a/05-MEAN/02-Tienda/Angular/src/app/componentes/maquetacion/maquetacion-tienda/maquetacion-tienda.component.html
+++ b/05-MEAN/02-Tienda/Angular/src/app/componentes/maquetacion/maquetacion-tienda/maquetacion-tienda.component.html
@@ -11,6 +11,8 @@
     </div>
     <div class="col-sm-2">
         <!--Router outlet DER-->
+
+        <app-resumen-cesta></app-resumen-cesta>
     </div>
 
 </div>
