--- a/05-MEAN/02-Tienda/Angular/src/app/componentes/tienda/menu/menu.component.html
+++ b/05-MEAN/02-Tienda/Angular/src/app/componentes/tienda/menu/menu.component.html
@@ -7,7 +7,7 @@
             <a class="nav-link" routerLink="/tienda/catalogo">Catálogo</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" routerLink="/tienda">Cesta</a>
+            <a class="nav-link" routerLink="/tienda/cesta">Cesta</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" routerLink="/tienda">Pedidos</a>
