--- a/05-MEAN/02-Tienda/Angular/src/app/componentes/tienda/detalle-cesta/detalle-cesta.component.html
+++ b/05-MEAN/02-Tienda/Angular/src/app/componentes/tienda/detalle-cesta/detalle-cesta.component.html
@@ -2,14 +2,14 @@
 
     <div class="row">
       <div class="col-3">
-        <img class="card-img-top" src="https://picsum.photos/300/330?random={{detalle.producto._id}}" alt="Card image">
+        <img class="card-img-top" src="https://picsum.photos/300/330?random={{detalle?.producto?._id}}" alt="Card image">
       </div>
   
       <div class="col-9"> 
   
-        <h4 class="card-title">{{detalle.producto.nombre}}</h4>
-        <h6 class="card-title">{{detalle.producto.fabricante}}</h6>
-        <p class="card-text">{{detalle.producto.descripcion.substring(0,200)}}...</p>
+        <h4 class="card-title">{{detalle?.producto?.nombre}}</h4>
+        <h6 class="card-title">{{detalle?.producto?.fabricante}}</h6>
+        <p class="card-text">{{detalle?.producto?.descripcion?.substring(0,200)}}...</p>
   
         <div class="d-flex mb-3">
           <div class="p-2 mr-auto">
