Nos metemos en asuntos delicados

--- a/05-MEAN/02-Tienda/Angular/src/app/componentes/maquetacion/cabecera/cabecera.component.html
+++ b/05-MEAN/02-Tienda/Angular/src/app/componentes/maquetacion/cabecera/cabecera.component.html
@@ -1,4 +1,4 @@
 
 <div class="text-center page-header">
-    <h2 class="mt-4 mb-4">Tienda 3000</h2>
+    <h2 class="mt-4 mb-4">Tienda 3000, ahora con eventos</h2>
 </div>  
