Nos metemos en asuntos delicados

--- a/05-MEAN/02-Tienda/Angular/src/app/componentes/tienda/cesta/cesta.component.html
+++ b/05-MEAN/02-Tienda/Angular/src/app/componentes/tienda/cesta/cesta.component.html
@@ -7,3 +7,22 @@
     <app-detalle-cesta [detalle]="dp" [cesta]="cesta"></app-detalle-cesta>
 </div>
 
+
+<div *ngIf="cesta.detalles.length==0">
+    <h2 class="text-center">No hay productos en la cesta</h2>
+</div>
+
+<br/>
+
+<!--
+<div *ngIf="mensaje" class="alert alert-danger">{{mensaje}}</div>
+-->
+
+<div class="d-flex justify-content-center mt-4 mb-4">
+    <h4>
+        Total {{ cesta.total }} €
+        <input type="button" value="Guardar" class="btn btn-primary ml-2" style="width:110px"/>
+        <button class="btn btn-primary ml-2">Comprar</button>
+        <button class="btn btn-danger ml-2" (click)="vaciarCesta()">Vaciar</button>
+    </h4>
+</div>
