--- a/05-MEAN/02-Tienda/Angular/src/app/componentes/tienda/resumen-cesta/resumen-cesta.component.html
+++ b/05-MEAN/02-Tienda/Angular/src/app/componentes/tienda/resumen-cesta/resumen-cesta.component.html
@@ -25,8 +25,10 @@
     <hr/>
 </div>
 
-<h4 *ngIf="cesta.detalles.length>0">
+<h4 *ngIf="cesta.detalles.length>0" class="text-center">
     Total: {{cesta?.total}} €
+    <br/>
+    <button class="btn btn-primary btn-sm" routerLink="/tienda/compra">Comprar</button>
 </h4>
 
 <div *ngIf="cesta.detalles.length==0" class="text-center">
